Basic Auth, роли,  разграничение доступа
